# ChangeLog for x11-proto/fixesproto
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/fixesproto/ChangeLog,v 1.27 2009/10/11 21:08:47 scarabeus Exp $

*fixesproto-4.1.1 (11 Oct 2009)

  11 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -fixesproto-4.1.ebuild, +fixesproto-4.1.1.ebuild:
  Version bump. Remove old. Fix RDEPEND to reflect reality correctly.

  03 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  fixesproto-4.1.ebuild:
  Adjust the deps to be correct.

*fixesproto-4.1 (03 Oct 2009)

  03 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +fixesproto-4.1.ebuild:
  Version bump.

  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
  fixesproto-4.0.ebuild:
  fix repoman warnings

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> fixesproto-4.0.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> fixesproto-4.0.ebuild:
  Mark 4.0 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  fixesproto-4.0.ebuild:
  arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  fixesproto-4.0.ebuild:
  ppc/sparc/mips/alpha stable

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> fixesproto-4.0.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> fixesproto-4.0.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  fixesproto-4.0.ebuild:
  x86 stable.

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> fixesproto-4.0.ebuild:
  Add ~x86-fbsd keyword.

*fixesproto-4.0 (22 Mar 2006)

  22 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -fixesproto-3.0.2.ebuild, +fixesproto-4.0.ebuild:
  Bump.

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org> fixesproto-3.0.2.ebuild:
  Mark 3.0.2 ~ia64

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> fixesproto-3.0.2.ebuild:
  Added ~ppc64

  31 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org>
  fixesproto-3.0.2.ebuild:
  Unstable on hppa.
