@@ -1,6 +1,6 @@
 DIST fixesproto-4.0.tar.bz2 38550 RMD160 fc1c2130ae89a88365cb039a5e9ffb8c6651c16e SHA1 de9139e4836f1ab234583406ea2ee6446ad7965f SHA256 b3fe971ccc8152db6c78da7117c31fc4cd2fcb2b6a4df3db0f8fed13d4ceb08f
 DIST fixesproto-4.1.1.tar.bz2 91338 RMD160 83f9663df63a6e02cfe7f362f7848bf5e1b034d8 SHA1 fb47920c629e08a56442a51968a02a22733085e5 SHA256 e72a32916ad4bbd03847f8945c55582bdbafc039d286ded7365d402a7ff164ef
 EBUILD fixesproto-4.0.ebuild 543 RMD160 acdd86aafac6cbc0a7f10ee3bc1179fb5ce8c9e9 SHA1 a6f61dbdead47b548ad972b4567ebf91b3396acb SHA256 d82e9e275bacd1a8add597545797645e5938b2655b10a50b3b5c227428622944
-EBUILD fixesproto-4.1.1.ebuild 609 RMD160 b0616407659cd7afce35181b366811815645be42 SHA1 3384d5003ff845b8e38b65fc51300bd677f8d4e5 SHA256 994606978ce6d02be3959f1a2ed19bd10d713dec00be175d08117019832da86b
-MISC ChangeLog 3204 RMD160 0d0415199956173bace3ad389c3c02e8abd99da8 SHA1 1da0497e401b0835eda16d4608518b9c159abc27 SHA256 84c68ead032c36415cee8cbd698b90357616f8761ed5fc50bf90faba31b0e634
+EBUILD fixesproto-4.1.1.ebuild 510 RMD160 a3343496c2960148c5ee76fe7b553918cae29e92 SHA1 fe4557f872c6c4e34e843835e1cab4f32fa29c84 SHA256 2dbad1bc49588ce13f1c171d2c1b481edd52ea6c00a63984f92b123d47bc70c9
+MISC ChangeLog 3305 RMD160 5bd4a049cd2a730078fd03c2495c0e9ec53ffa36 SHA1 37a38feb5d1a2176a9ec86ca45d52f90e28887fb SHA256 70b5aaad888c73d58bd5d85633bab29b88c942f3a87ba88dcbbce3ccea5bc6ce
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
